--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "babel-jest": "^23.6.0",
     "babel-loader": "^8.0.4",  
     "css-loader": "^2.0.0", 
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
