Set up base styles folder and initial variables

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -21,7 +21,9 @@
     {
       "path": "styles/style.scss",
       "imports": [
-        "styles/base/_setup.scss"
+        "styles/base/_setup.scss",
+        "styles/base/_variables.scss",
+        "styles/base/_base.scss"
       ]
     }
   ],
