--- a/prepros-6.config
+++ b/prepros-6.config
@@ -23,7 +23,9 @@
       "imports": [
         "styles/base/_setup.scss",
         "styles/base/_variables.scss",
-        "styles/base/_base.scss"
+        "styles/base/_base.scss",
+        "styles/layout/_header.scss",
+        "styles/pages/_setup-page.scss"
       ]
     }
   ],
