--- a/prepros-6.config
+++ b/prepros-6.config
@@ -25,7 +25,8 @@
         "styles/base/_variables.scss",
         "styles/base/_base.scss",
         "styles/layout/_header.scss",
-        "styles/pages/_setup-page.scss"
+        "styles/pages/_setup-page.scss",
+        "styles/pages/_question.scss"
       ]
     }
   ],
