Set up game over stylings

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -26,7 +26,8 @@
         "styles/base/_base.scss",
         "styles/layout/_header.scss",
         "styles/pages/_setup-page.scss",
-        "styles/pages/_question.scss"
+        "styles/pages/_question.scss",
+        "styles/pages/_game-over.scss"
       ]
     }
   ],
